# supercop

./: MACROS  OPERATIONS  PROTOTYPES.c  data-do  data-do-biglittle  data-init  data-run  data-vars  do-part  k-targets  measure-anything.c  subroutines-do-part  try-anything.c  trygen.do  trygen.py
checksum/: do  usesha256sum
compiledinfo/: namespace-gnu  size-bsd  top
cpucycles/: amd64-perfpmc.c  amd64-perfpmcff.c  amd64-pmcff.c  amd64-tscasm.c  amd64rdpmc.c  amd64rdpmc.h  arm32-1176.c  arm32-cortex.c  arm64-perfpmc.c  arm64-pmc.c  arm64-vct.c  cpuid_intel.h  default-gettimeofday.c  default-mach.c  default-monotonic.c  default-perfevent.c  default-zero.c  do  leoncpuinfo.c  leoncpuinfo.h  loong64-rdtime.c  loong64.c  loong64.h  mips64-cc.c  options  osfreq.c  ppc64-mftb.c  riscv.c  riscv32-perf-rdcycle.c  riscv32-rdcycle.c  riscv64-perfrdcycle.c  riscv64-rdcycle.c  s390x-stckf.c  sparc64-rdtick.c  wrapper.c  x86-tsc.c  x86-tscasm.c
cpuid/: do  x86.c
crypto_aead/: measure.c  try.c
crypto_aead/isapxv20/ref/: .gitignore  CMakeLists.txt  README.md  crypto_aead.c  crypto_aead.h  isap.c  isap.h  permutation.c
crypto_auth/: measure.c  try.c
crypto_box/: measure.c  try.c
crypto_core/: try.c
crypto_decode/: measure.c
crypto_dh/: measure.c  try.c
crypto_encode/: measure.c  try.c
crypto_encrypt/: measure.c  try.c
crypto_hash/: measure.c  try.c
crypto_hashblocks/: try.c
crypto_kem/: measure.c  try.c
crypto_onetimeauth/: measure.c  try.c
crypto_rng/: measure.c  try.c
crypto_scalarmult/: measure.c  try.c
crypto_secretbox/: measure.c  try.c
(+8972 files in other folders)
